RESOLVED FIXED173090
[WK2] mediaContentTypesRequiringHardwareSupport setting not being propogated
https://bugs.webkit.org/show_bug.cgi?id=173090
Summary [WK2] mediaContentTypesRequiringHardwareSupport setting not being propogated
Jer Noble
Reported 2017-06-07 22:48:13 PDT
[WK2] mediaContentTypesRequiringHardwareSupport setting not being propogated
Attachments
Patch (2.04 KB, patch)
2017-06-07 22:51 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-06-07 22:51:19 PDT
WebKit Commit Bot
Comment 2 2017-06-08 10:26:30 PDT
Comment on attachment 312280 [details] Patch Clearing flags on attachment: 312280 Committed r217934: <http://trac.webkit.org/changeset/217934>
WebKit Commit Bot
Comment 3 2017-06-08 10:26:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.