[WK2] mediaContentTypesRequiringHardwareSupport setting not being propogated https://bugs.webkit.org/show_bug.cgi?id=173090

Reviewed by Eric Carlson.

Passing a NSString* into the WebPreferencesStore::Value constructor would rather cast the NSString*
into a bool than a const String&. So explicitly cast the NSString* into a String before passing.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _initializeWithConfiguration:]):


Canonical link: https://commits.webkit.org/189958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217934 268f45cc-cd09-0410-ab3c-d52691b4dbfc